# Deston

./: Cargo.toml  LICENSE  README.md  config.toml
src/: lib.rs  main.rs
src/config/: config.rs
src/loadBalancer/: layer7.rs  mod.rs
src/load_balancer/: layer4.rs  layer7.rs  load_balancer.rs  mod.rs
src/load_balancer/algorithm/: algorithm.rs  mod.rs
src/load_balancer/algorithm/static/: ip_hashing.rs  mod.rs  round_robin.rs  weighted_round_robin.rs  weighted_rr.rs
src/server/: server.rs
tests/: algorithm_tests.rs  config_tests.rs  integration_tests.rs  shutdown_tests.rs
