[package]
name = "Deston"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2.0"
sha2 = "0.10.8"
toml = "0.8.20"
thiserror = "2.0.12"

